--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -1,295 +1,467 @@
-% 
-% A working bib file for my in-press manuscripts
-%
-%
-
-In Press Articles
-
-
-@string{ JCTC = "J. Chem. Theor. Comp."}
-@string{ JCPC = "J. Chem. Phys. Comm." }
-@string{ JCP  = "J. Chem. Phys." }
-@string{ JPCL = "J. Phys. Chem. Lett." }
-@string{ JPCA = "J. Phys. Chem. A" }
-@string{ EPJB = "Eur. Phys. J. B" }
-
-
-
-
-
-
-
-%-- 2019 --%
-
-@misc{doi:10.1002/wcms.1436,
-  author = {Williams-Young, David B and Petrone, Alessio and Sun, Shichao and 
-            Stetina, Torin F and Lestrange, Patrick and Hoyer, Chad E and 
-            Nascimento, Daniel R and Koulias, Lauren and Wildman, Andrew and 
-            Kasper, Joseph and Joshua J. Goings and Feizhi Ding and 
-            A. Eugene DePrince III and Edward F. Valeev and Xiaosong Li},
-  title = {The Chronus quantum software package},
-  journal = {Wiley Interdisciplinary Reviews: Computational Molecular Science},
-  volume = {10},
-  number = {2},
-  pages = {e1436},
-  year = {2019},
-  doi = {10.1002/wcms.1436},
-  url = {https://doi.org/10.1002/wcms.1436},
-  eprint = {arXiv:1905.01381}
+@Article{Di_Felice_2023,
+  author    = {Rosa Di Felice and Maricris L. Mayes and Ryan M. Richard and David B. Williams-Young and Garnet Kin-Lic Chan and Wibe A. de Jong and Niranjan Govind and Martin Head-Gordon and Matthew R. Hermes and Karol Kowalski and Xiaosong Li and Hans Lischka and Karl T. Mueller and Erdal Mutlu and Anders M. N. Niklasson and Mark R. Pederson and Bo Peng and Ron Shepard and Edward F. Valeev and Mark van Schilfgaarde and Bess Vlaisavljevich and Theresa L. Windus and Sotiris S. Xantheas and Xing Zhang and Paul M. Zimmerman},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {A Perspective on Sustainable Computational Chemistry Software Development and Integration},
+  year      = {2023},
+  month     = {sep},
+  doi       = {10.1021/acs.jctc.3c00419},
+  publisher = {American Chemical Society ({ACS})},
+  url       = {https://doi.org/10.1021/acs.jctc.3c00419},
 }
 
-@article{doi:10.1021/acs.jctc.9b00729,
-  author = {Koulias, Lauren N. and Williams-Young, David B. and Nascimento, Daniel R. and 
-            DePrince, A. Eugene III and Li, Xiaosong},
-  title = {Relativistic Real-Time Time-Dependent Equation-of-Motion Coupled-Cluster},
-  journal = JCTC,
-  volume = {15},
-  number = {12},
-  pages = {6617-6624},
-  year = {2019},
-  doi = {10.1021/acs.jctc.9b00729},
-  URL = {https://doi.org/10.1021/acs.jctc.9b00729}
+@Article{Ko_2023,
+  author    = {Taehee Ko and Joseph P. Heindel and Xingyi Guan and Teresa Head-Gordon and David B. Williams-Young and Chao Yang},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Using Diffusion Maps to Analyze Reaction Dynamics for a Hydrogen Combustion Benchmark Dataset},
+  year      = {2023},
+  month     = {aug},
+  number    = {17},
+  pages     = {5872--5885},
+  volume    = {19},
+  doi       = {10.1021/acs.jctc.3c00426},
+  eprint    = {https://arxiv.org/abs/2304.09296},
+  publisher = {American Chemical Society ({ACS})},
 }
 
-
-@article{doi:10.1021/acs.jctc.9b00632,
-  author = {Sun, Shichao and Beck, Ryan A. and Williams-Young, David and Li, Xiaosong},
-  title = {Simulating Magnetic Circular Dichroism Spectra with Real-Time Time-Dependent 
-           Density Functional Theory in Gauge Including Atomic Orbitals},
-  journal = JCTC,
-  volume = {15},
-  number = {12},
-  pages = {6824-6831},
-  year = {2019},
-  doi = {10.1021/acs.jctc.9b00632},
-  URL = {https://doi.org/10.1021/acs.jctc.9b00632}
+@Article{Williams_Young_2023,
+  author    = {David B. Williams-Young and Andrey Asadchev and Doru Thom Popovici and David Clark and Jonathan Waldrop and Theresa L. Windus and Edward F. Valeev and Wibe A. de Jong},
+  journal   = {The Journal of Chemical Physics},
+  title     = {Distributed memory, {GPU} accelerated Fock construction for hybrid, Gaussian basis density functional theory},
+  year      = {2023},
+  month     = {jun},
+  number    = {23},
+  volume    = {158},
+  doi       = {10.1063/5.0151070},
+  eprint    = {https://arxiv.org/abs/2303.14280},
+  publisher = {{AIP} Publishing},
 }
 
-@article{doi:10.1002/cptc.201900161,
-  title = {Modeling magneto-Photoabsorption using time-dependent complex generalized Hartree-Fock},
-  author = {Stetina, Torin F and Sun, Shichao and Williams-Young, David B and Li, Xiaosong},
-  journal = {ChemPhotoChem},
-  volume = {3},
-  number = {9},
-  pages = {739--746},
-  year = {2019},
-  doi = {10.1002/cptc.201900161},
-  url = {https://doi.org/10.1002/cptc.201900161}
+@Article{Williams-Young2023,
+  author    = {David B. Williams-Young and Norm M. Tubman and Carlos Mejuto-Zaera and Wibe A. de Jong},
+  journal   = {The Journal of Chemical Physics},
+  title     = {A parallel, distributed memory implementation of the adaptive sampling configuration interaction method},
+  year      = {2023},
+  month     = {jun},
+  number    = {21},
+  volume    = {158},
+  doi       = {10.1063/5.0148650},
+  eprint    = {https://arxiv.org/abs/2303.05688},
+  publisher = {{AIP} Publishing},
 }
 
-@article{doi:10.1063/1.5092628,
-  author = {Chad E. Hoyer and David B. Williams--Young and Chen Huang and Xiaosong Li},
-  title = {Embedding Non-Collinear Two-Component Electronic Structure in a Collinear Quantum Environment},
-  journal = JCP,
-  volume = {150},
-  number = {17},
-  pages = {174114},
-  doi = {10.1063/1.5092628},
-  url = {https://doi.org/10.1063/1.5092628}
+@Article{Richard_2023,
+  author    = {Ryan M. Richard and Kristopher Keipert and Jonathan Waldrop and Murat Ke{\c{c}}eli and David Williams-Young and Raymond Bair and Jeffery Boschen and Zachery Crandall and Kevin Gasperich and Quazi Ishtiaque Mahmud and Ajay Panyala and Edward Valeev and Hubertus van Dam and Wibe A. de Jong and Theresa L. Windus},
+  journal   = {The Journal of Chemical Physics},
+  title     = {{PluginPlay}: Enabling exascale scientific software one module at a time},
+  year      = {2023},
+  month     = {may},
+  number    = {18},
+  volume    = {158},
+  doi       = {10.1063/5.0147903},
+  publisher = {{AIP} Publishing},
 }
 
-@article{doi:10.1021/acs.jctc.9b00172,
-  author = {Bo Peng and Roel {Van Beeumen} and David B. Williams--Young and
-    Karol Kowalski and Chao Yang},
-  title = {Approximate Green’s Function Coupled Cluster Method Employing Effective Dimension Reduction},
-  journal = JCTC,
-  volume = {15},
-  number = {5},
-  pages = {3185--3196},
-  eprint = {arXiv:1902.06016},
-  doi = {10.1021/acs.jctc.9b00172},
-  url = {https://doi.org/10.1021/acs.jctc.9b00172}
+@Article{Shen2023,
+  author    = {Yizhi Shen and Katherine Klymko and James Sud and David B. Williams-Young and Wibe A. de Jong and Norm M. Tubman},
+  journal   = {Quantum},
+  title     = {Real-Time Krylov Theory for Quantum Computing Algorithms},
+  year      = {2023},
+  month     = {jul},
+  pages     = {1066},
+  volume    = {7},
+  doi       = {10.22331/q-2023-07-25-1066},
+  eprint    = {https://arxiv.org/abs/2208.01063},
+  publisher = {Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
 }
 
-@article{doi:10.1021/acs.jctc.9b00095,
-  author = {Shichao Sun and David B. Williams--Young and Xiaosong Li},
-  title = {An Ab Initio Linear Response Method for Computing Magnetic Circular 
-    Dichroism Spectra with Non-Perturbative Treatment of Magnetic Field},
-  journal = JCTC,
-  volume = {15},
-  number = {5},
-  pages = {3162--3169},
-  year = {2019},
-  doi = {10.1021/acs.jctc.8b01140},
-  url = {https://doi.org/10.1021/acs.jctc.8b01140}
+@Article{Gomes_2023,
+  author    = {Niladri Gomes and David B. Williams-Young and Wibe A. de Jong},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Computing the Many-Body Green's Function with Adaptive Variational Quantum Dynamics},
+  year      = {2023},
+  month     = {may},
+  number    = {11},
+  pages     = {3313--3323},
+  volume    = {19},
+  doi       = {10.1021/acs.jctc.3c00150},
+  eprint    = {https://arxiv.org/abs/2302.03093},
+  publisher = {American Chemical Society ({ACS})},
 }
 
-@article{doi:10.1021/acs.jctc.8b01140,
-  author = {Shichao Sun and David B. Williams--Young and Torin F. Stetina and 
-    Xiaosong Li},
-  title = {Generalized Hartree-Fock with a Non-perturbative Treatment of Strong Magnetic Fields: 
-    Application to Molecular Spin Phase Transitions}
-  journal = JCTC,
-  year = {2019},
-  volume = {51},
-  number = {1},
-  pages = {348--356},
-  doi = {10.1021/acs.jctc.8b01140},
-  url = {https://doi.org/10.1021/acs.jctc.8b01140}
+@InProceedings{SidLakhdar2023,
+  author    = {Wissam Sid-Lakhdar and Sebastien Cayrols and Daniel Bielich and Ahmad Abdelfattah and Piotr Luszczek and Mark Gates and Stanimire Tomov and Hans Johansen and David Williams-Young and Timothy Davis and Jack Dongarra and Hartwig Anzt},
+  booktitle = {2023 {IEEE} International Parallel and Distributed Processing Symposium ({IPDPS})},
+  title     = {{PAQR}: Pivoting Avoiding {QR} factorization},
+  year      = {2023},
+  month     = {may},
+  publisher = {{IEEE}},
+  doi       = {10.1109/ipdps54959.2023.00040},
 }
 
-%-- 2018 --%
-
-@article{doi:10.1140/epjb/e2018-90170-1,
-  author = {Alessio Petrone and David B. Williams--Young and Shichao Sun and 
-    Torin F. Stetina and Xiaosong Li} ,
-  title = {An Efficient Implementation of Two-Component Relativistic Density 
-    Functional Theory with Torque-Free Auxiliary Variables},
-  journal = EPJB,
-  year = {2018},
-  volume = {91},
-  number = {7},
-  pages = {169},
-  doi = {10.1140/epjb/e2018-90170-1},
-  url = {https://doi.org/10.1140/epjb/e2018-90170-1}
+@Article{MejutoZaera2022,
+  author    = {Carlos Mejuto-Zaera and Demeter Tzeli and David Williams-Young and Norm M. Tubman and Mikul{\'{a}}{\v{s}} Matou{\v{s}}ek and Jiri Brabec and Libor Veis and Sotiris S. Xantheas and Wibe A. de Jong},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {The Effect of Geometry, Spin, and Orbital Optimization in Achieving Accurate, Correlated Results for Iron-Sulfur Cubanes},
+  year      = {2022},
+  month     = {jan},
+  number    = {2},
+  pages     = {687--702},
+  volume    = {18},
+  doi       = {10.1021/acs.jctc.1c00830},
+  eprint    = {https://arxiv.org/abs/2105.01754},
+  publisher = {American Chemical Society ({ACS})},
 }
 
-@article{doi:10.1021/acs.jctc.8b00141,
-  author = {Joseph Kasper and David B. Williams--Young and Eugene Vecharynski
-    and Chao Yang and Xiaosong Li} ,
-  title = {A Well--Tempered Hybrid Method for Solving Challenging Time--Dependent
-    Density Functional Theory (TDDFT) Systems},
-  journal = JCTC,
-  year = {2018},
-  volume = {14},
-  number = {4},
-  pages = {2034--2041},
-  doi = {10.1021/acs.jctc.8b00141},
-  url = {http://doi.org/10.1021/acs.jctc.8b00141}
+@InProceedings{Bez2021,
+  author    = {Jean Luca Bez and Houjun Tang and Bing Xie and David Williams-Young and Rob Latham and Rob Ross and Sarp Oral and Suren Byna},
+  booktitle = {2021 {IEEE}/{ACM} Sixth International Parallel Data Systems Workshop ({PDSW})},
+  title     = {I/O Bottleneck Detection and Tuning: Connecting the Dots using Interactive Log Analysis},
+  year      = {2021},
+  month     = {nov},
+  publisher = {{IEEE}},
+  doi       = {10.1109/pdsw54622.2021.00008},
 }
 
-@article{doi:10.1021/acs.jctc.7b00832,
-  author = {Patrick J. Lestrange and David B. Williams--Young and Alessio Petrone
-    and Carlos A. Jimenez--Hoyos and Xiaosong Li},
-  title = {Efficient Implementation of Variation after Projection Generalized 
-    Hartree--Fock},
-  journal = JCTC,
-  year = {2018},
-  volume = {14},
-  number = {2},
-  pages = {588--596},
-  doi = {10.1021/acs.jctc.7b00832},
-  url = {http://doi.org/10.1021/acs.jctc.7b00832}
+@Article{WilliamsYoung2021,
+  author    = {David B. Williams-Young and Abhishek Bagusetty and Wibe A. de Jong and Douglas Doerfler and Hubertus J.J. van Dam and {\'{A}}lvaro V{\'{a}}zquez-Mayagoitia and Theresa L. Windus and Chao Yang},
+  journal   = {Parallel Computing},
+  title     = {Achieving performance portability in Gaussian basis set density functional theory on accelerator based architectures in {NWChemEx}},
+  year      = {2021},
+  month     = {dec},
+  pages     = {102829},
+  volume    = {108},
+  doi       = {10.1016/j.parco.2021.102829},
+  publisher = {Elsevier {BV}},
 }
 
-
-
-
-%-- 2017 --%
-
-@article{doi:10.1021/acs.jpca.7b09467,
-  author = {Matthew S. Barclay† and Timothy J. Quincy and 
-    David B. Williams--Young and Marco Caricato and Christopher G. Elles},
-  title = {Accurate Assignments of Excited-State Resonance Raman Spectra: 
-    A Benchmark Study Combining Experiment and Theory},
-  journal = JPCA,
-  year = {2017},
-  volume = {121},
-  number = {41},
-  pages = {7937--7946},
-  doi = {10.1021/acs.jpca.7b09467},
-  url = {http://doi.org/10.1021/acs.jpca.7b09467}
+@InProceedings{Ahmed2021,
+  author    = {Hadia Ahmed and David B. Williams-Young and Khaled Z. Ibrahim and Chao Yang},
+  booktitle = {2021 {IEEE} International Parallel and Distributed Processing Symposium Workshops ({IPDPSW})},
+  title     = {Performance Modeling and Tuning for {DFT} Calculations on Heterogeneous Architectures},
+  year      = {2021},
+  month     = {jun},
+  publisher = {{IEEE}},
+  doi       = {10.1109/ipdpsw52791.2021.00108},
 }
 
-@article{doi:10.1021/acs.jctc.7b00402,
-  author = {Roel {Van Beeumen} and David B. Williams--Young and Joesph Kasper and 
-    Chao Yang and Esmond Ng and Xiaosong Li },
-  title = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
-  journal = JCTC,
-  year = {2017},
-  volume = {13},
-  number = {10},
-  pages = {4950--4961},
-  eprint = {arXiv:1704.05923},
-  doi = {10.1021/acs.jctc.7b00402},
-  url = {http://doi.org/10.1021/acs.jctc.7b00402}
+@Article{Kowalski2021,
+  author    = {Karol Kowalski and Raymond Bair and Nicholas P. Bauman and Jeffery S. Boschen and Eric J. Bylaska and Jeff Daily and Wibe A. de Jong and Thom Dunning and Niranjan Govind and Robert J. Harrison and Murat Ke{\c{c}}eli and Kristopher Keipert and Sriram Krishnamoorthy and Suraj Kumar and Erdal Mutlu and Bruce Palmer and Ajay Panyala and Bo Peng and Ryan M. Richard and T. P. Straatsma and Peter Sushko and Edward F. Valeev and Marat Valiev and Hubertus J. J. van Dam and Jonathan M. Waldrop and David B. Williams-Young and Chao Yang and Marcin Zalewski and Theresa L. Windus},
+  journal   = {Chemical Reviews},
+  title     = {From {NWChem} to {NWChemEx}: Evolving with the Computational Chemistry Landscape},
+  year      = {2021},
+  month     = {mar},
+  number    = {8},
+  pages     = {4962--4998},
+  volume    = {121},
+  doi       = {10.1021/acs.chemrev.0c00998},
+  publisher = {American Chemical Society ({ACS})},
 }
 
-@article{doi:10.1021/acs.jctc.7b00218,
-  author = {Franco Egidi and David B. Williams--Young and Alberto Baiardi and Julien Bloino and 
-    Giovanni Scalmani and Michael J. Frisch and Xiaosong Li and Vincenzo Barone},
-  title = {Effective Inclusion of MEchanical and Electrical Anharmonivity in Excited Electronic
-    States: VPT2--TDDFT Route},
-  journal = JCTC,
-  year = {2017},
-  volume = {13},
-  number = {6},
-  pages = {2789--2803},
-  doi = {10.1021/acs.jctc.7b00218},
-  url = {http://doi.org/10.1021/acs.jctc.7b00218}
+@Article{Yang2020,
+  author    = {Chao Yang and Jiri Brabec and Libor Veis and David B. Williams-Young and Karol Kowalski},
+  journal   = {Frontiers in Chemistry},
+  title     = {Solving Coupled Cluster Equations by the Newton Krylov Method},
+  year      = {2020},
+  month     = {dec},
+  volume    = {8},
+  doi       = {10.3389/fchem.2020.590184},
+  publisher = {Frontiers Media {SA}},
 }
 
-@article{doi:10.1021/acs.jpca.7b02905,
-  author = {Alessio Petrone and David B. Williams--Young and David B. Lingerfelt
-    and Xiaosong Li},
-  title = {Ab Initio Transient Raman Analysis},
-  journal = JPCA,
-  volume = {121},
-  number = {20},
-  year = {2017},
-  pages = {3958--3965},
-  doi = {10.1021/acs.jpca.7b02905},
-  url = {http://doi.org/10.1021/acs.jpca.7b02905}
+@Article{WilliamsYoung2020,
+  author    = {David B. Williams-Young and Wibe A. de Jong and Hubertus J. J. van Dam and Chao Yang},
+  journal   = {Frontiers in Chemistry},
+  title     = {On the Efficient Evaluation of the Exchange Correlation Potential on Graphics Processing Unit Clusters},
+  year      = {2020},
+  month     = {dec},
+  volume    = {8},
+  doi       = {10.3389/fchem.2020.581058},
+  eprint    = {https://arxiv.org/abs/2007.03143},
+  publisher = {Frontiers Media {SA}},
 }
 
-%-- 2016 --%
-
-@article{doi:10.1021/acs.jpclett.6b02292,
-  author = {Alessio Petrone and David Lingerfelt and David Williams--Young
-    and Xiaosong Li},
-  title = {Ab Initio Transient Vibrational Spectral Analysis},
-  journal = JPCL,
-  year = {2016},
-  volume = {7},
-  pages = {4501--4508},
-  doi = {10.1021/acs.jpclett.6b02292},
-  url = {http://doi.org/10.1021/acs.jpclett.6b02292}
+@Article{WilliamsYoung2020a,
+  author    = {David B. Williams-Young and Paul G. Beckman and Chao Yang},
+  journal   = {{ACM} Transactions on Mathematical Software},
+  title     = {A Shift Selection Strategy for Parallel Shift-invert Spectrum Slicing in Symmetric Self-consistent Eigenvalue Computation},
+  year      = {2020},
+  month     = {oct},
+  number    = {4},
+  pages     = {1--31},
+  volume    = {46},
+  doi       = {10.1145/3409571},
+  eprint    = {https://arxiv.org/abs/1908.06043},
+  publisher = {Association for Computing Machinery ({ACM})},
 }
 
-@article{doi:10.1021/acs.jctc.6b00693,
-  author = {David Bruce Williams--Young and Joshua J. Goings and Xiaosong Li},
-  title = {Accelerating Real--Time Time--Dependent Density Functional Theory
-    with a Non--Recursive Chebyshev Expansion of the Quantum Propagator},
-  journal = JCTC,
-  year = {2016},
-  volume = {12},
-  number = {11},
-  pages = {5333--5338},
-  doi = {10.1021/acs.jctc.6b00693},
-  url = {https://doi.org/10.1021/acs.jctc.6b00693}
+@InProceedings{WilliamsYoung2020b,
+  author    = {David B. Williams-Young and Chao Yang},
+  booktitle = {49th International Conference on Parallel Processing - {ICPP}},
+  title     = {Parallel Shift-Invert Spectrum Slicing on Distributed Architectures with {GPU} Accelerators},
+  year      = {2020},
+  month     = {aug},
+  publisher = {{ACM}},
+  doi       = {10.1145/3404397.3404416},
 }
 
-@article{doi:10.1021/acs.jctc.6b00833,
-  author = {David Bruce Williams--Young and Franco Egidi and
-    Xiaosong Li},
-  title = {Relativistic Particle--Particle Tamm--Dancoff Approximation},
-  journal = JCTC,
-  year = {2016},
-  volume = {12},
-  number = {11},
-  pages = {5379--5384},
-  doi = {10.1021/acs.jctc.6b00833},
-  url = {https://doi.org/10.1021/acs.jctc.6b00833}
+@Article{Peng2019,
+  author    = {Bo Peng and Roel Van Beeumen and David B. Williams-Young and Karol Kowalski and Chao Yang},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Approximate Green's Function Coupled Cluster Method Employing Effective Dimension Reduction},
+  year      = {2019},
+  month     = {apr},
+  number    = {5},
+  pages     = {3185--3196},
+  volume    = {15},
+  doi       = {10.1021/acs.jctc.9b00172},
+  eprint    = {http://arxiv.org/abs/1902.06016},
+  publisher = {American Chemical Society ({ACS})},
 }
 
-@article{doi:10.1021/acs.jctc.5b00697,
-  author = {David Lingerfelt and David Bruce Williams--Young 
-    and Alessio Petrone and Xiaosong Li},
-  title = {Direct Ab Initio (Meta-)Surface--Hopping Dynamics},
-  journal = JCTC,
-  volume = {12},
-  number = {3},
-  pages = {935--945},
-  doi = {10.1021/acs.jctc.5b00697},
-  url = {https://doi.org/10.1021/acs.jctc.5b00697}
+@Article{Koulias2019,
+  author    = {Lauren N. Koulias and David B. Williams-Young and Daniel R. Nascimento and A. Eugene DePrince and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Relativistic Real-Time Time-Dependent Equation-of-Motion Coupled-Cluster},
+  year      = {2019},
+  month     = {oct},
+  number    = {12},
+  pages     = {6617--6624},
+  volume    = {15},
+  doi       = {10.1021/acs.jctc.9b00729},
+  publisher = {American Chemical Society ({ACS})},
 }
 
+@Article{Sun2019,
+  author    = {Shichao Sun and Ryan A. Beck and David Williams-Young and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Simulating Magnetic Circular Dichroism Spectra with Real-Time Time-Dependent Density Functional Theory in Gauge Including Atomic Orbitals},
+  year      = {2019},
+  month     = {oct},
+  number    = {12},
+  pages     = {6824--6831},
+  volume    = {15},
+  doi       = {10.1021/acs.jctc.9b00632},
+  publisher = {American Chemical Society ({ACS})},
+}
 
-%-- Old --%
+@Article{WilliamsYoung2019,
+  author    = {David B. Williams-Young and Alessio Petrone and Shichao Sun and Torin F. Stetina and Patrick Lestrange and Chad E. Hoyer and Daniel R. Nascimento and Lauren Koulias and Andrew Wildman and Joseph Kasper and Joshua J. Goings and Feizhi Ding and A. Eugene DePrince and Edward F. Valeev and Xiaosong Li},
+  journal   = {{WIREs} Computational Molecular Science},
+  title     = {The Chronus Quantum software package},
+  year      = {2019},
+  month     = {sep},
+  number    = {2},
+  volume    = {10},
+  doi       = {10.1002/wcms.1436},
+  eprint    = {https://arxiv.org/abs/1905.01381},
+  publisher = {Wiley},
+}
 
-@misc{arXiv:1903.05575,
-  author = {David B. Williams-Young and Xiaosong Li},
-  title = {On the Efficacy and High-Performance Implementation of Quaternion Matrix Multiplication},
-  year = {2019},
-  eprint = {arXiv:1903.05575}
+@Article{Stetina2019,
+  author    = {Torin F. Stetina and Shichao Sun and David B. Williams-Young and Xiaosong Li},
+  journal   = {{ChemPhotoChem}},
+  title     = {Modeling Magneto-Photoabsorption Using Time-Dependent Complex Generalized Hartree-Fock},
+  year      = {2019},
+  month     = {jul},
+  number    = {9},
+  pages     = {739--746},
+  volume    = {3},
+  doi       = {10.1002/cptc.201900161},
+  publisher = {Wiley},
+}
+
+@Article{Hoyer2019,
+  author    = {Chad E. Hoyer and David B. Williams-Young and Chen Huang and Xiaosong Li},
+  journal   = {The Journal of Chemical Physics},
+  title     = {Embedding non-collinear two-component electronic structure in a collinear quantum environment},
+  year      = {2019},
+  month     = {may},
+  number    = {17},
+  volume    = {150},
+  doi       = {10.1063/1.5092628},
+  publisher = {{AIP} Publishing},
+}
+
+@Article{Sun2019a,
+  author    = {Shichao Sun and David Williams-Young and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {An ab Initio Linear Response Method for Computing Magnetic Circular Dichroism Spectra with Nonperturbative Treatment of Magnetic Field},
+  year      = {2019},
+  month     = {apr},
+  number    = {5},
+  pages     = {3162--3169},
+  volume    = {15},
+  doi       = {10.1021/acs.jctc.9b00095},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Sun2018,
+  author    = {Shichao Sun and David B. Williams-Young and Torin F. Stetina and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Generalized Hartree{\textendash}Fock with Nonperturbative Treatment of Strong Magnetic Fields: Application to Molecular Spin Phase Transitions},
+  year      = {2018},
+  month     = {nov},
+  number    = {1},
+  pages     = {348--356},
+  volume    = {15},
+  doi       = {10.1021/acs.jctc.8b01140},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Petrone2018,
+  author    = {Alessio Petrone and David B. Williams-Young and Shichao Sun and Torin F. Stetina and Xiaosong Li},
+  journal   = {The European Physical Journal B},
+  title     = {An efficient implementation of two-component relativistic density functional theory with torque-free auxiliary variables},
+  year      = {2018},
+  month     = {jul},
+  number    = {7},
+  volume    = {91},
+  doi       = {10.1140/epjb/e2018-90170-1},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
+@Article{Kasper2018,
+  author    = {Joseph M. Kasper and David B. Williams-Young and Eugene Vecharynski and Chao Yang and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {A Well-Tempered Hybrid Method for Solving Challenging Time-Dependent Density Functional Theory ({TDDFT}) Systems},
+  year      = {2018},
+  month     = {mar},
+  number    = {4},
+  pages     = {2034--2041},
+  volume    = {14},
+  doi       = {10.1021/acs.jctc.8b00141},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Lestrange2018,
+  author    = {Patrick J. Lestrange and David B. Williams-Young and Alessio Petrone and Carlos A. Jim{\'{e}}nez-Hoyos and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Efficient Implementation of Variation after Projection Generalized Hartree{\textendash}Fock},
+  year      = {2018},
+  month     = {jan},
+  number    = {2},
+  pages     = {588--596},
+  volume    = {14},
+  doi       = {10.1021/acs.jctc.7b00832},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Barclay2017,
+  author    = {Matthew S. Barclay and Timothy J. Quincy and David B. Williams-Young and Marco Caricato and Christopher G. Elles},
+  journal   = {The Journal of Physical Chemistry A},
+  title     = {Accurate Assignments of Excited-State Resonance Raman Spectra: A Benchmark Study Combining Experiment and Theory},
+  year      = {2017},
+  month     = {oct},
+  number    = {41},
+  pages     = {7937--7946},
+  volume    = {121},
+  doi       = {10.1021/acs.jpca.7b09467},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Beeumen2017,
+  author    = {Roel {Van Beeumen} and David B. Williams-Young and Joseph M. Kasper and Chao Yang and Esmond G. Ng and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Model Order Reduction Algorithm for Estimating the Absorption Spectrum},
+  year      = {2017},
+  month     = {sep},
+  number    = {10},
+  pages     = {4950--4961},
+  volume    = {13},
+  doi       = {10.1021/acs.jctc.7b00402},
+  eprint    = {http://arxiv.org/abs/1704.05923},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Egidi2017,
+  author    = {Franco Egidi and David B. Williams-Young and Alberto Baiardi and Julien Bloino and Giovanni Scalmani and Michael J. Frisch and Xiaosong Li and Vincenzo Barone},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Effective Inclusion of Mechanical and Electrical Anharmonicity in Excited Electronic States: {VPT}2-{TDDFT} Route},
+  year      = {2017},
+  month     = {may},
+  number    = {6},
+  pages     = {2789--2803},
+  volume    = {13},
+  doi       = {10.1021/acs.jctc.7b00218},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Petrone2017,
+  author    = {Alessio Petrone and David B. Williams-Young and David B. Lingerfelt and Xiaosong Li},
+  journal   = {The Journal of Physical Chemistry A},
+  title     = {Ab Initio Excited-State Transient Raman Analysis},
+  year      = {2017},
+  month     = {may},
+  number    = {20},
+  pages     = {3958--3965},
+  volume    = {121},
+  doi       = {10.1021/acs.jpca.7b02905},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Petrone2016,
+  author    = {Alessio Petrone and David B. Lingerfelt and David B. Williams-Young and Xiaosong Li},
+  journal   = {The Journal of Physical Chemistry Letters},
+  title     = {Ab Initio Transient Vibrational Spectral Analysis},
+  year      = {2016},
+  month     = {oct},
+  number    = {22},
+  pages     = {4501--4508},
+  volume    = {7},
+  doi       = {10.1021/acs.jpclett.6b02292},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{WilliamsYoung2016,
+  author    = {David Williams-Young and Joshua J. Goings and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Accelerating Real-Time Time-Dependent Density Functional Theory with a Nonrecursive Chebyshev Expansion of the Quantum Propagator},
+  year      = {2016},
+  month     = {oct},
+  number    = {11},
+  pages     = {5333--5338},
+  volume    = {12},
+  doi       = {10.1021/acs.jctc.6b00693},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{WilliamsYoung2016a,
+  author    = {David Williams-Young and Franco Egidi and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Relativistic Two-Component Particle{\textendash}Particle Tamm{\textendash}Dancoff Approximation},
+  year      = {2016},
+  month     = {oct},
+  number    = {11},
+  pages     = {5379--5384},
+  volume    = {12},
+  doi       = {10.1021/acs.jctc.6b00833},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{Lingerfelt2016,
+  author    = {David B. Lingerfelt and David B. Williams-Young and Alessio Petrone and Xiaosong Li},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {Direct $\less$i$\greater$ab Initio$\less$/i$\greater$ (Meta-)Surface-Hopping Dynamics},
+  year      = {2016},
+  month     = {feb},
+  number    = {3},
+  pages     = {935--945},
+  volume    = {12},
+  doi       = {10.1021/acs.jctc.5b00697},
+  publisher = {American Chemical Society ({ACS})},
+}
+
+@Article{WilliamsYoung2019a,
+  author        = {Williams-Young, David and Li, Xiaosong},
+  title         = {On the Efficacy and High-Performance Implementation of Quaternion Matrix Multiplication},
+  year          = {2019},
+  month         = mar,
+  abstract      = {Quaternion symmetry is ubiquitous in the physical sciences. As such, much work has been afforded over the years to the development of efficient schemes to exploit this symmetry using real and complex linear algebra. Recent years have also seen many advances in the formal theoretical development of explicitly quaternion linear algebra with promising applications in image processing and machine learning. Despite these advances, there do not currently exist optimized software implementations of quaternion linear algebra. The leverage of optimized linear algebra software is crucial in the achievement of high levels of performance on modern computing architectures, and thus provides a central tool in the development of high-performance scientific software. In this work, a case will be made for the efficacy of high-performance quaternion linear algebra software for appropriate problems. In this pursuit, an optimized software implementation of quaternion matrix multiplication will be presented and will be shown to outperform a vendor tuned implementation for the analogous complex matrix operation. The results of this work pave the path for further development of high-performance quaternion linear algebra software which will improve the performance of the next generation of applicable scientific applications.},
+  archiveprefix = {arXiv},
+  copyright     = {arXiv.org perpetual, non-exclusive license},
+  doi           = {10.48550/ARXIV.1903.05575},
+  eprint        = {1903.05575},
+  keywords      = {Mathematical Software (cs.MS), FOS: Computer and information sciences},
+  primaryclass  = {cs.MS},
+  publisher     = {arXiv},
 }
