--- a/_assets/DBWY.bib
+++ b/_assets/DBWY.bib
@@ -1,14 +1,3 @@
-@Article{Di_Felice_2023,
-  author    = {Rosa Di Felice and Maricris L. Mayes and Ryan M. Richard and David B. Williams-Young and Garnet Kin-Lic Chan and Wibe A. de Jong and Niranjan Govind and Martin Head-Gordon and Matthew R. Hermes and Karol Kowalski and Xiaosong Li and Hans Lischka and Karl T. Mueller and Erdal Mutlu and Anders M. N. Niklasson and Mark R. Pederson and Bo Peng and Ron Shepard and Edward F. Valeev and Mark van Schilfgaarde and Bess Vlaisavljevich and Theresa L. Windus and Sotiris S. Xantheas and Xing Zhang and Paul M. Zimmerman},
-  journal   = {Journal of Chemical Theory and Computation},
-  title     = {A Perspective on Sustainable Computational Chemistry Software Development and Integration},
-  year      = {2023},
-  month     = {sep},
-  doi       = {10.1021/acs.jctc.3c00419},
-  publisher = {American Chemical Society ({ACS})},
-  url       = {https://doi.org/10.1021/acs.jctc.3c00419},
-}
-
 @Article{Ko_2023,
   author    = {Taehee Ko and Joseph P. Heindel and Xingyi Guan and Teresa Head-Gordon and David B. Williams-Young and Chao Yang},
   journal   = {Journal of Chemical Theory and Computation},
@@ -465,3 +454,20 @@
   primaryclass  = {cs.MS},
   publisher     = {arXiv},
 }
+
+@Article{Felice2023,
+  author    = {Rosa Di Felice and Maricris L. Mayes and Ryan M. Richard and David B. Williams-Young and Garnet Kin-Lic Chan and Wibe A. de Jong and Niranjan Govind and Martin Head-Gordon and Matthew R. Hermes and Karol Kowalski and Xiaosong Li and Hans Lischka and Karl T. Mueller and Erdal Mutlu and Anders M. N. Niklasson and Mark R. Pederson and Bo Peng and Ron Shepard and Edward F. Valeev and Mark van Schilfgaarde and Bess Vlaisavljevich and Theresa L. Windus and Sotiris S. Xantheas and Xing Zhang and Paul M. Zimmerman},
+  journal   = {Journal of Chemical Theory and Computation},
+  title     = {A Perspective on Sustainable Computational Chemistry Software Development and Integration},
+  year      = {2023},
+  issn      = {1549-9626},
+  month     = sep,
+  number    = {20},
+  pages     = {7056--7076},
+  volume    = {19},
+  doi       = {10.1021/acs.jctc.3c00419},
+  publisher = {American Chemical Society ({ACS})},
+  url       = {https://doi.org/10.1021/acs.jctc.3c00419},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
